<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    tools:context=".Activity.menuprofessor">

    <Button
        android:id="@+id/btncriarrav"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="31dp"
        android:layout_marginTop="34dp"
        android:text="Criar Avaliação"
        app:layout_constraintBottom_toTopOf="@+id/btncriartreino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Button
        android:id="@+id/btncriartreino"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="25dp"
        android:text="@string/criar_treino"
        app:layout_constraintBottom_toTopOf="@+id/btnatualizarav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btncriarrav"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnatualizarav"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:text="@string/atulizar_avalia_o"
        app:layout_constraintBottom_toTopOf="@+id/btngerartabela"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btncriartreino"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Button
        android:id="@+id/btngerartabela"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:text="@string/gerar_tabela"
        app:layout_constraintBottom_toTopOf="@+id/btnvoltarmenuprof"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnatualizarav"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnvoltarmenuprof"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="61dp"
        android:text="Voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btngerartabela"
        tools:ignore="HardcodedText,MissingConstraints" />
</android.support.constraint.ConstraintLayout>